2016-03-01  Lukas Kluft <lukas.kluft@gmail.com>

	* environment.yml: Removed typhon after discussion with Oliver.

	`pip install -e` should be the default way, so there is no need for
	typhon being a dependency in environment.yml

2016-03-01  Lukas Kluft <lukas.kluft@gmail.com>

	* environment.yml: Added typhon to list of dependencies.

	typhon is now automatically installed when using environment.yml with conda.
	It is still possible to overwrite this version with a local development
	version using `pip install -e`.

2016-02-29  Lukas Kluft <lukas.kluft@gmail.com>

	* typhon/arts/griddedfield.py: Replaced loop with dict comprehension.

2016-02-29  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Close the door, a tab snuck in.

2016-02-29  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py:

	Add revision to version number for development releases.

2016-02-26  Oliver Lemke  <olemke@core-dump.info>

	* typhon/datasets/__init__.py: Fix typo in import.

2016-02-25  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/utils/metaclass.py: Added

	New module to collect typhon-related metaclasses.  Added two
	metaclasses:

	- DocStringInheritor.  When a class with this metaclass has a method
	overridden, and the subclass method omits any docstring, it will
	automatically inherit the docstring from the superclass.

	- AbstractDocStringInheritor: the same, but for abstract classes.

	Those metaclasses are used by my dataset and collocation frameworks.

	* typhon/utils/cache.py: Added

	New module collecting functions related to caching.  Python comes with
	functools.lru_cache but this doesn't do mutable objects.  That's for a
	good reason, but I want to cache mutable objects anyway!  Use at your
	own risk.

	For disk-stored memoisation, I like to use joblib, but this is not
	currently a typhon dependency.

	* typhon/utils/__init__.py: Also import new modules I added

	* typhon/datasets/__init__.py: Added.  Import sole module.
