@@ -2,6 +2,7 @@
 """
 
 import functools
+import logging
 
 def mutable_cache(maxsize=10):
     """In-memory cache like functools.lru_cache but for any object
